# kautos-data-platform

./: .gitignore  README.md  pyproject.toml
kautos_data_platform/: definitions.py
kautos_data_platform/defs/ingestion/dlt/: assets.py  definitions.py  resources.py
kautos_data_platform/defs/ingestion/dlt/sources/wa/: __init__.py  helpers.py  history.py  paginators.py
kautos_data_platform/utils/: __init__.py
