[project]
name = "kautos_data_platform"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
dependencies = [
    "dbt-core<1.9",
    "dagster==1.10.*",
    "dagster-cloud",
    # integrations
    "dagster-dbt",
    "dagster-dlt",
    "dagster-duckdb",
    "dagster-pandas",
    # additional dependencies
    "pandas[parquet]",
    "dlt[duckdb]",
    "pydantic",
    "pyyaml"
]

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kautos_data_platform"]

# ########################
# ##### DAGSTER
# ########################

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "kautos_data_platform"

[tool.dg.project.python_environment]
active = true

[project.entry-points]
"dagster_dg.plugin" = { kautos_data_platform = "kautos_data_platform.lib"}
